Add structure to css, variable on bg color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Earth Quiz</title>
 </head>
 <body>
+    <h1 id="title">THE EARTH QUIZ</h1>
+    <p>How much do you know the world you live in?</p>
     <div class="conatiner">
         <div id="question-cont" class="hide">
             <div id="question">Question</div>
