Fix basic structure of css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Earth Quiz</title>
 </head>
 <body>
+    <header>
     <h1 id="title">THE EARTH QUIZ</h1>
     <p>How much do you know the world you live in?</p>
+    </header>
+    <main>
     <div class="conatiner">
         <div id="question-cont" class="hide">
             <div id="question">Question</div>
@@ -25,6 +28,9 @@
             <button id="next" class="next-btn btn hide">Next</button>
         </div>
     </div>
+    </main>
+    <footer>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
