Fix bg color variable and add container style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>How much do you know the world you live in?</p>
     </header>
     <main>
-    <div class="conatiner">
+    <div class="container">
         <div id="question-cont" class="hide">
             <div id="question">Question</div>
             <div id="answer-btns" class="btn-options">
