Style complete for main cotainer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="main-btns">
-            <button id="start" class="strt-btn btn">Start</button>
+            <button id="start" class="start-btn btn">Start</button>
             <button id="next" class="next-btn btn hide">Next</button>
         </div>
     </div>
