--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
     <h1 id="title">THE EARTH QUIZ</h1>
     <p>How much do you know the world you live in?</p>
+    <img src="assets/images/image/hero-earth.jpg" alt="hero">
     </header>
     <main>
     <div class="container">
