--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <footer>
         <!--Score area-->
         <div class="score-area">
-            <p class="scores">Correct Answers <span id="score">0</span></p>
-            <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+            <p class="scores">Correct : <span id="score">0</span></p>
+            <p class="scores">Incorrect : <span id="incorrect">0</span></p>
         </div>
     </footer>
     <!--JavaScript Page-->
